# AgenticStructuringData

./: README.md  pyproject.toml
src/project_job_change/: crew.py  main.py
src/project_job_change/config/: agents.yaml  tasks.yaml
src/project_job_change/tools/: custom_tool.py
tests/: test_tool.py
